fix overflow image

--- a/apps/daffio/src/app/content/home/components/home-hero/home-hero.component.scss
+++ b/apps/daffio/src/app/content/home/components/home-hero/home-hero.component.scss
@@ -1,5 +1,10 @@
 @import 'utilities';
 
+:host {
+	display: block;
+	overflow: hidden;
+}
+
 .daffio-home-hero {
 	&__grid {
     display: grid;
